- Fixed styling issue in Multi-Picker Field Types

--- a/RockWeb/Styles/_forms.less
+++ b/RockWeb/Styles/_forms.less
@@ -327,8 +327,9 @@ dl:not(.dl-horizontal) {
   }
 
   > .row,
-  > .form-row {
-    // For stacking .form-row + .form-row
+  > .form-row,
+  > .form-group {
+    // For stacking .form-row and .form-group
     width: 100%;
   }
 
