--- a/RockWeb/Styles/style-v2/components/_buttons.scss
+++ b/RockWeb/Styles/style-v2/components/_buttons.scss
@@ -884,5 +884,5 @@ input[type="button"] {
   color: var(--color-info-strong);
 }
 .ant-select-selector .ant-select-selection-overflow .btn-link {
-  color: var(--color-interface-soft);
+  color: var(--color-interface-medium);
 }
