--- a/RockWeb/Styles/style-v2/components/_panels.scss
+++ b/RockWeb/Styles/style-v2/components/_panels.scss
@@ -1062,7 +1062,7 @@
     .btn {
       display:          flex;
       justify-content:  space-between;
-      padding-top:      calc((var(--sxpacing-small) * 2) + 14px);
+      padding-top:      calc((var(--spacing-xsmall) * 2) + 14px);
       text-align:       left;
       background:       transparent;
       border:           0;
