--- a/RockWeb/Styles/style-v2/components/_alerts.scss
+++ b/RockWeb/Styles/style-v2/components/_alerts.scss
@@ -54,10 +54,10 @@
   }
 
   &.alert-grid {
-    margin-top:   -var(--spacing-medium);
-    margin-right: -var(--spacing-medium);
+    margin-top:   calc(var(--spacing-medium) * -1);
+    margin-right: calc(var(--spacing-medium) * -1);
     margin-bottom: var(--spacing-medium);
-    margin-left:  -var(--spacing-medium);
+    margin-left:  calc(var(--spacing-medium) * -1);
     border-radius: 0;
   }
 }
