- Changing Interface Softer Variable valu.

--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -7,7 +7,7 @@
   --color-interface-strong:    #5D5D6F;
   --color-interface-medium:    #8B8BA7;
   --color-interface-soft:      #D9D9E3;
-  --color-interface-softer:    #F2F2F7;
+  --color-interface-softer:    #E7E9EF;
   --color-interface-softest:   #FFFFFF;
 
   // APPLICATION COLORS 
