- Move detailBlock.ts style to _rock-obsidian.scss and delete the style inline.

--- a/RockWeb/Styles/style-v2/rock-components/_rock-obsidian.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_rock-obsidian.scss
@@ -35,6 +35,10 @@
     visibility: hidden;
 }
 
+.panel-flex .label-group > .label + * {
+  margin-left: 8px;
+}
+
 .panel.panel-flex {
   display: flex;
   flex-direction: column;
