--- a/RockWeb/Styles/style-v2/rock-components/_panel.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_panel.scss
@@ -275,7 +275,7 @@
   padding: 6px 8px;
   color: var(--color-interface-strong);
   cursor: pointer;
-  border-bottom: 1px solid var(--color-interface-softer);
+  border-bottom: 1px solid var(--color-interface-soft);
 
   &:before,
   &:after {
