--- a/RockWeb/Styles/_components.less
+++ b/RockWeb/Styles/_components.less
@@ -54,3 +54,5 @@
 @import "rock-components/obsidian-dropdownlist.less";  // 50. Obsidian Drop Down Lists
 @import "rock-components/color-selector.less";         // 51. Color Selector
 @import "rock-components/image-with-icon.less";        // 52. Image with Icon
+
+@import "rock-components/custom-select.less";           // 53. Custom Select
