- add flex and align-items to match the grid inline-style

--- a/RockWeb/Styles/style-v2/rock-components/_grid-obisidian.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_grid-obisidian.scss
@@ -284,6 +284,8 @@
 }
 
 .grid-cell {
+    display: flex;
+    align-items: center;
     padding: var(--table-cell-padding-y) var(--table-cell-padding-x);
     line-height: 1.4;
     align-self: stretch;
