--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -124,6 +124,7 @@
 @import 'rock-components/color-selector';
 @import 'rock-components/picker-geo';
 @import 'rock-components/profile';
+@import 'rock-components/custom-select';
 
 
 /* ===================== BLOCK =================== */
