- Continue polishing style v2

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -41,14 +41,14 @@
   --color-link-hover: #003766;
 
   /* CATEGORICAL COLORS  */
-  --color-categorial-1: #007aff;
-  --color-categorial-2: #5856D6;
-  --color-categorial-3: #4cd964;
-  --color-categorial-4: #ff2d55;
-  --color-categorial-5: #ff9500;
-  --color-categorial-6: #5ac8fa;
-  --color-categorial-7: #ffcc00;
-  --color-categorial-8: #8e8e93;
+  --color-categorical-1: #007aff;
+  --color-categorical-2: #5856D6;
+  --color-categorical-3: #4cd964;
+  --color-categorical-4: #ff2d55;
+  --color-categorical-5: #ff9500;
+  --color-categorical-6: #5ac8fa;
+  --color-categorical-7: #ffcc00;
+  --color-categorical-8: #8e8e93;
 
   /* DIVERGING COLORS */
   --color-diverging-1: #2507b7;
