--- a/RockWeb/Styles/style-v2/core/_page-admin.scss
+++ b/RockWeb/Styles/style-v2/core/_page-admin.scss
@@ -133,7 +133,7 @@
   padding:      var(--spacing-xsmall) 12px 0;
   margin-right: 0;
   color:      #fff;
-  background:   var(--color-interface-stronger);
+  background:   #2d2e31;
   border-color: var(--adminbar-bg); // TODO this should be darken by 10% using css mix() when available
   border-style: solid;
   border-width: 1px 1px 0;
