--- a/RockWeb/Styles/style-v2/utilities/_colors.scss
+++ b/RockWeb/Styles/style-v2/utilities/_colors.scss
@@ -28,14 +28,14 @@
 .color-link-hover { color: var(--color-link-hover); }
 
 /* CATEGORICAL COLORS */
-.color-categorical-1 { color: var(--color-categorial-1); }
-.color-categorical-2 { color: var(--color-categorial-2); }
-.color-categorical-3 { color: var(--color-categorial-3); }
-.color-categorical-4 { color: var(--color-categorial-4); }
-.color-categorical-5 { color: var(--color-categorial-5); }
-.color-categorical-6 { color: var(--color-categorial-6); }
-.color-categorical-7 { color: var(--color-categorial-7); }
-.color-categorical-8 { color: var(--color-categorial-8); }
+.color-categorical-1 { color: var(--color-categorical-1); }
+.color-categorical-2 { color: var(--color-categorical-2); }
+.color-categorical-3 { color: var(--color-categorical-3); }
+.color-categorical-4 { color: var(--color-categorical-4); }
+.color-categorical-5 { color: var(--color-categorical-5); }
+.color-categorical-6 { color: var(--color-categorical-6); }
+.color-categorical-7 { color: var(--color-categorical-7); }
+.color-categorical-8 { color: var(--color-categorical-8); }
 
 /* DIVERGING COLORS */
 .color-diverging-1  { color: var(--color-diverging-1); }
