--- a/RockWeb/Styles/style-v2/components/_popovers.scss
+++ b/RockWeb/Styles/style-v2/components/_popovers.scss
@@ -140,7 +140,7 @@
   margin:             0;
   font-size:          var(--font-size-regular);
   background-color:   var(--color-interface-softest);
-  border-bottom:      1px solid var(--color-interface-softer);
+  border-bottom:      1px solid var(--color-interface-soft);
   border-radius:      calc(var(--rounded-small) - 1) calc(var(--rounded-small) - 1) 0 0;
 }
 // ====================== END TITLE ======================
