--- a/RockWeb/Styles/style-v2/utilities/_background.scss
+++ b/RockWeb/Styles/style-v2/utilities/_background.scss
@@ -30,14 +30,14 @@
 .background-link-hover { background-color: var(--color-link-hover); }
 
 /* CATEGORICAL COLORS */
-.background-categorical-1 { background-color: var(--color-categorial-1); }
-.background-categorical-2 { background-color: var(--color-categorial-2); }
-.background-categorical-3 { background-color: var(--color-categorial-3); }
-.background-categorical-4 { background-color: var(--color-categorial-4); }
-.background-categorical-5 { background-color: var(--color-categorial-5); }
-.background-categorical-6 { background-color: var(--color-categorial-6); }
-.background-categorical-7 { background-color: var(--color-categorial-7); }
-.background-categorical-8 { background-color: var(--color-categorial-8); }
+.background-categorical-1 { background-color: var(--color-categorical-1); }
+.background-categorical-2 { background-color: var(--color-categorical-2); }
+.background-categorical-3 { background-color: var(--color-categorical-3); }
+.background-categorical-4 { background-color: var(--color-categorical-4); }
+.background-categorical-5 { background-color: var(--color-categorical-5); }
+.background-categorical-6 { background-color: var(--color-categorical-6); }
+.background-categorical-7 { background-color: var(--color-categorical-7); }
+.background-categorical-8 { background-color: var(--color-categorical-8); }
 
 /* DIVERGING COLORS */
 .background-diverging-1  { background-color: var(--color-diverging-1); }
