--- a/RockWeb/Themes/NextGenCheckin/Styles/theme.css
+++ b/RockWeb/Themes/NextGenCheckin/Styles/theme.css
@@ -268,14 +268,14 @@ th {
   --color-secondary: #83758f;
   --color-secondary-tint: color-mix(in srgb, var(--color-secondary) 50%, #FFF var(--tint-white-percentage));
   --color-secondary-shade: color-mix(in srgb, var(--color-secondary) 100%, #000 var(--shade-black-percentage));
-  --color-categorial-1: #007aff;
-  --color-categorial-2: #5856D6;
-  --color-categorial-3: #4cd964;
-  --color-categorial-4: #ff2d55;
-  --color-categorial-5: #ff9500;
-  --color-categorial-6: #5ac8fa;
-  --color-categorial-7: #ffcc00;
-  --color-categorial-8: #8e8e93;
+  --color-categorical-1: #007aff;
+  --color-categorical-2: #5856D6;
+  --color-categorical-3: #4cd964;
+  --color-categorical-4: #ff2d55;
+  --color-categorical-5: #ff9500;
+  --color-categorical-6: #5ac8fa;
+  --color-categorical-7: #ffcc00;
+  --color-categorical-8: #8e8e93;
   --color-diverging-1: #2507b7;
   --color-diverging-2: #3109f5;
   --color-diverging-3: #6447f7;
@@ -19845,35 +19845,35 @@ body.rock-modal-page {
 
 /* CATEGORICAL COLORS */
 .background-categorical-1 {
-  background-color: var(--color-categorial-1);
+  background-color: var(--color-categorical-1);
 }
 
 .background-categorical-2 {
-  background-color: var(--color-categorial-2);
+  background-color: var(--color-categorical-2);
 }
 
 .background-categorical-3 {
-  background-color: var(--color-categorial-3);
+  background-color: var(--color-categorical-3);
 }
 
 .background-categorical-4 {
-  background-color: var(--color-categorial-4);
+  background-color: var(--color-categorical-4);
 }
 
 .background-categorical-5 {
-  background-color: var(--color-categorial-5);
+  background-color: var(--color-categorical-5);
 }
 
 .background-categorical-6 {
-  background-color: var(--color-categorial-6);
+  background-color: var(--color-categorical-6);
 }
 
 .background-categorical-7 {
-  background-color: var(--color-categorial-7);
+  background-color: var(--color-categorical-7);
 }
 
 .background-categorical-8 {
-  background-color: var(--color-categorial-8);
+  background-color: var(--color-categorical-8);
 }
 
 /* DIVERGING COLORS */
@@ -20806,35 +20806,35 @@ body.rock-modal-page {
 
 /* CATEGORICAL COLORS */
 .color-categorical-1 {
-  color: var(--color-categorial-1);
+  color: var(--color-categorical-1);
 }
 
 .color-categorical-2 {
-  color: var(--color-categorial-2);
+  color: var(--color-categorical-2);
 }
 
 .color-categorical-3 {
-  color: var(--color-categorial-3);
+  color: var(--color-categorical-3);
 }
 
 .color-categorical-4 {
-  color: var(--color-categorial-4);
+  color: var(--color-categorical-4);
 }
 
 .color-categorical-5 {
-  color: var(--color-categorial-5);
+  color: var(--color-categorical-5);
 }
 
 .color-categorical-6 {
-  color: var(--color-categorial-6);
+  color: var(--color-categorical-6);
 }
 
 .color-categorical-7 {
-  color: var(--color-categorial-7);
+  color: var(--color-categorical-7);
 }
 
 .color-categorical-8 {
-  color: var(--color-categorial-8);
+  color: var(--color-categorical-8);
 }
 
 /* DIVERGING COLORS */
