--- a/RockWeb/Styles/style-v2/rock-components/_picker-geo.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_picker-geo.scss
@@ -1,3 +1,12 @@
+// Picker GEO - styling for geo picker control (Rock Component)
+
+// =============================================================
+// Table of Content           
+//  + Base Style 
+// =============================================================
+
+
+// ======================== BASE STYLE ========================
 .gm-container {
     position: relative;
 }
@@ -45,3 +54,6 @@
     height: 100%;
     width: 100%;
 }
+// ====================== END BASE STYLE ======================
+
+
