--- a/RockWeb/Styles/style-v2/utilities/_flex.scss
+++ b/RockWeb/Styles/style-v2/utilities/_flex.scss
@@ -13,6 +13,12 @@
   min-width: 50%;
 }
 
+@media (min-width: 768px) {
+  .flex-1 {
+    min-width: fit-content;
+  }
+}
+
 @media (min-width: $screen-medium) {
   .row-eq-height-md {
     display: -webkit-flex;
