--- a/RockWeb/Styles/style-v2/rock-components/_profile.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_profile.scss
@@ -1,3 +1,5 @@
+
+
 .profile-nav {
     display: flex;
     flex-wrap: wrap;
@@ -62,7 +64,7 @@
   
     .zone-nav {
       order: 3;
-      margin-top: 8px;
+      margin-top: var(--spacing-xsmall);
       overflow: hidden;
   
       @media screen and (min-width: $screen-small) {
@@ -100,7 +102,7 @@
       align-items: center;
       justify-content: center;
       min-height: 60px;
-      padding: 4px 12px;
+      padding: var(--spacing-tiny) var(--spacing-small);
       overflow: hidden;
       border-bottom: 1px solid #e5e7eb;
       row-gap: calc(var(--badge-size) * .13333);
@@ -138,7 +140,7 @@
         &:last-child {
           flex: 0 0 auto;
           order: initial;
-          padding: 0 12px;
+          padding: 0 var(--spacing-small);
         }
       }
     }
@@ -146,7 +148,7 @@
     .rockbadge-attendance {
         --badge-size: 48px;
         align-self: flex-end;
-        margin-bottom: -4px !important;
+        margin-bottom: calc(var(--spacing-tiny) * -1) !important;
 
         .trend-chart {
             width: 286px;
@@ -225,7 +227,7 @@
 .person-profile-row {
     display: flex;
     flex-wrap: wrap;
-    margin: 24px 0 0;
+    margin: var(--spacing-large) 0 0;
     > * {
       flex-shrink: 0;
       width: 100%;
@@ -233,69 +235,69 @@
     }
   
     @media (min-width: ($screen-small - 1)) {
-      margin: 24px -9px 0;
+      margin: var(--spacing-large) calc(var(--spacing-xsmall) * -1) 0;
   
       > * {
-        padding-right: 9px !important;
-        padding-left: 9px !important;
+        padding-right:    var(--spacing-xsmall) !important;
+        padding-left:     var(--spacing-xsmall) !important;
       }
     }
 }
 
 .person-profile {
-    margin: 24px 0 0;
+    margin: var(--spacing-large) 0 0;
   
     .panel-title {
-      font-size: 16px;
+      font-size: var(--font-size-regular);
     }
     @media (min-width: 647px) {
-        flex-wrap: nowrap;
-        margin: 24px 8px 0;
-        gap: 8px;
+        flex-wrap:    nowrap;
+        margin:       var(--spacing-large) var(--spacing-xsmall) 0;
+        gap:          var(--spacing-xsmall);
     }
     @media (min-width: $screen-small) {
-        margin: 24px 15px 0;
-        gap: 0;
+        margin:   var(--spacing-large) var(--spacing-medium) 0;
+        gap:      0;
         .profile-content + .main-footer {
-            padding: 24px;
+            padding: var(--spacing-large);
         }
     }
 }
 
 .person-profile-ext {
-    margin-right: 24px;
-    margin-left: 24px;
+    margin-right:   var(--spacing-large);
+    margin-left:    var(--spacing-large);
 }
   
 .profile-content + .main-footer {
-    padding: 24px 9px;
+    padding: var(--spacing-large) var(--spacing-xsmall);
 }
 
 .card-profile {
-    margin-bottom: 24px;
-    border: 1px solid #e9ecef;
-    box-shadow: 0 1px 3px rgba(0,0,0,.1);
+    margin-bottom:  var(--spacing-large);
+    border:         1px solid #e9ecef;
+    box-shadow:     0 1px 3px rgba(0,0,0,.1);
   
     .card-header {
         display: flex;
         align-items: center;
-        padding: 12px 8px 12px 16px;
-        font-weight: 600;
+        padding: var(--spacing-small) var(--spacing-xsmall) var(--spacing-small) var(--spacing-medium);
+        font-weight: var(--font-weight-semibold);
   
         .card-title {
             margin: 0 auto 0 0;
         }
   
         > .panel-labels {
-            margin-top: -8px;
-            margin-bottom: -8px;
+            margin-top:     calc(var(--spacing-xsmall) * -1);
+            margin-bottom:  calc(var(--spacing-xsmall) * -1);
   
             .btn-link {
-                width: 24px;
-                padding: 6px 0;
-                margin-bottom: 0;
-                font-size: 14px;
-                color: #737475;
+                width:          24px;
+                padding:        6px 0;
+                margin-bottom:  0;
+                font-size:      var(--font-size-small);
+                color: var(--color-interface-medium);
                 border: 0;
     
                 &:hover {
@@ -305,10 +307,10 @@
         }
     }
     .card-subheader {
-        padding: 8px 16px;
-        font-size: 14px;
-        font-weight: 600;
-        color: #6c757d;
+        padding:      var(--spacing-xsmall) var(--spacing-medium);
+        font-size:    var(--font-size-xsmall);
+        font-weight:  var(--font-weight-semibold);
+        color:      var(--color-interface-strong);
         background: #e9ecef;
     }
     
@@ -317,7 +319,7 @@
     }
     
     .card-section {
-        padding: 16px;
+        padding: var(--spacing-medium);
 
         ~ .card-section {
             border-top: 1px solid #dee2e6;
@@ -325,28 +327,28 @@
     }
     
     .card-body {
-        padding: 16px;
+        padding: var(--spacing-medium);
     }
 }
   
 
 
 .profile-actions {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin: 16px -16px 0;
+    display:          flex;
+    flex-wrap:        wrap;
+    align-items:      center;
+    justify-content:  center;
+    margin:           var(--spacing-medium) calc(var(--spacing-xsmall) * -1) 0;
 }
 
 .action-container {
-    position: relative;
-    display: flex;
+    position:       relative;
+    display:        flex;
     flex-direction: column;
-    align-items: center;
-    padding: 4px 10px;
-    font-size: 12px;
-    color: #737475;
+    align-items:    center;
+    padding:        4px 10px;
+    font-size:      var(--font-size-xsmall);
+    color:          var(--color-interface-medium);
 }
 
 .profile-squish {
@@ -365,8 +367,8 @@
     }
   
     .note-editor {
-      padding: 16px 24px;
-      margin: 0;
+      padding:  var(--spacing-medium) var(--spacing-large);
+      margin:   0;
       // border-bottom: 1px solid #dfe0e1;
   
       .meta-figure {
@@ -380,7 +382,7 @@
         transition: height 250ms;
   
         &:hover {
-          background: #fff;
+          background: var(--color-interface-softest);
         }
   
         &.focus-within {
@@ -388,7 +390,7 @@
   
           &,
           &:hover {
-            background: #fff;
+            background: var(--color-interface-softest);
           }
         }
       }
@@ -419,7 +421,7 @@
       }
   
       fieldset {
-        padding: 12px 24px 0;
+        padding: var(--spacing-small) var(--spacing-large) 0;
       }
   
       .settings {
@@ -435,11 +437,11 @@
 
 .fluid-crop {
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: #f4f4f4;
+    top:      0;
+    right:    0;
+    bottom:   0;
+    left:     0;
+    background: var(--color-interface-softer);
   
     .fluidbox,
     .fluidbox-wrap,
@@ -458,11 +460,11 @@
 }
 
 .trend-chart li span {
-    position: absolute;
-    bottom: 0;
-    display: block;
-    width: 100%;
-    min-width: 2px;
+    position:   absolute;
+    bottom:     0;
+    display:    block;
+    width:      100%;
+    min-width:  2px;
     min-height: 1px;
     max-height: 100%;
     background: currentColor;
@@ -475,18 +477,18 @@
 }
 
 .card-section dl.reversed-label dd {
-    font-size: 14px;
-    color: #6c757d;
+    font-size: var(--font-size-small);
+    color: var(--color-interface-strong);
 }
 
 .card-section dl.reversed-label dt {
-    font-size: 16px;
+    font-size: var(--font-size-regular);
     line-height: 1.3125;
     color: var(--color-interface-strong);
 }
 
 .card-section dl.reversed-label dt.d-none + dd {
-    margin-top: 16px;
+    margin-top: var(--spacing-medium);
 }
 
 .expand-section {
@@ -499,9 +501,9 @@
     flex-direction: row;
     align-items: center;
     padding: 6px 10px;
-    margin-bottom: 4px;
+    margin-bottom: var(--spacing-tiny);
     border: 1px solid transparent;
-    border-radius: 6px;
+    border-radius: var(--rounded-small);
 }
 .btn-phone .profile-row-icon {
     margin: 0 6px 0 auto;
@@ -516,14 +518,14 @@
 }
 
 .family-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(60px, 78px));
-    gap: 8px;
-    justify-content: space-evenly;
-    margin-bottom: 8px;
+    display:                grid;
+    grid-template-columns:  repeat(auto-fill, minmax(60px, 78px));
+    gap:                    var(--spacing-xsmall);
+    justify-content:        space-evenly;
+    margin-bottom:          var(--spacing-xsmall);
   
     @media screen and (min-width: 480px) {
-      gap: 8px 18px;
+      gap: var(--spacing-xsmall) var(--spacing-medium);
     }
 }
 
@@ -532,7 +534,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    font-size: 13px;
+    font-size: var(--font-size-small);
     line-height: 16px;
     text-align: center;
   
@@ -540,7 +542,7 @@
       position: relative;
       width: 100%;
       padding-bottom: 100%;
-      border-radius: 8px;
+      border-radius: var(--rounded-medium);
   
       > * {
         border-radius: inherit;
@@ -557,7 +559,7 @@
   
     .name-link {
       min-height: 30px;
-      margin-top: 4px;
+      margin-top: var(--spacing-tiny);
       color: var(--color-interface-stronger);
   
       .name {
@@ -581,11 +583,11 @@
     align-items: center;
 }
 .profile-row + .profile-row {
-    margin-top: 16px;
+    margin-top: var(--spacing-medium);
 }
 .profile-row-icon {
     width: 34px;
-    margin-right: 8px;
+    margin-right: var(--spacing-xsmall);
     font-size: 18px;
     color: #ced4da;
     text-align: center;
@@ -630,8 +632,8 @@
 
 .card-profile-bio .person-first-name {
     display: block;
-    font-size: 14px;
-    color: #6c757d;
+    font-size: var(--font-size-small);
+    color: var(--color-interface-strong);
 }
   
 .card-profile-bio.deceased .person-name::before {
@@ -663,12 +665,12 @@
 .profile-toggle {
     display: inline-flex;
     align-items: center;
-    padding: 4px 8px 4px 4px;
-    color: #6c757d !important;
+    padding: var(--spacing-tiny) var(--spacing-xsmall) var(--spacing-tiny) var(--spacing-xsmall);
+    color: var(--color-interface-strong) !important;
     border-radius: 4px;
 }
 .profile-toggle:hover {
-    color: #6c757d;
+    color: var(--color-interface-strong);
     background: #eee;
 }
 
@@ -692,7 +694,7 @@
 .avatar-lg {
     &,
     &::after {
-      border-radius: 6px;
+      border-radius: var(--rounded-small);
     }
 }
   
@@ -714,7 +716,7 @@
 .avatar-lg {
     &,
     &::after {
-      border-radius: 6px;
+      border-radius: var(--rounded-small);
     }
 }
 
@@ -810,8 +812,9 @@
     pointer-events: none;
     border-top: 3px solid var(--color-danger-strong);
     transition: background .2s ease-in-out;
+
     .profile-label {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       font-weight: 600;
       cursor: pointer;
       opacity: 0;
@@ -830,3 +833,4 @@
       }
     }
 }
+
