--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -114,7 +114,7 @@
 @import 'rock-components/image-with-icon';          // Fully Format. There are Some hard coded value. 
 @import 'rock-components/modal';                    // Fully Format. Must import below the bootstrap modal.
 @import 'rock-components/pickers';                  // Fully Format. There are Some hard coded value.
-@import 'rock-components/person-program-step';
+@import 'rock-components/person-program-step';      // Fully Format.
 @import 'rock-components/card';                     // Fully Format.
 @import 'rock-components/range-slider';             // Fully Format.
 @import 'rock-components/rock-obsidian';            // Fully Format.
@@ -147,7 +147,7 @@
 
 
 /* ===================== UTILITIES =================== */
-@import 'utilities/helpers';
+@import 'utilities/helpers';                // Fully Format.
 @import 'utilities/type';
 @import 'utilities/cursor';                 // Fully Format.
 @import 'utilities/borders';                // Fully Format.
