--- a/RockWeb/Styles/style-v2/components/_popovers.scss
+++ b/RockWeb/Styles/style-v2/components/_popovers.scss
@@ -39,7 +39,7 @@
   font-size:          var(--font-size-regular);
   background-color:   var(--color-interface-softest);
   background-clip:    padding-box;
-  border:             1px solid rgba(0,0,0,.2);;
+  border:             1px solid var(--color-interface-soft);
   border-radius:      var(--rounded-small);
   box-shadow:         0 5px 10px rgba(0, 0, 0, .2);
 
