--- a/RockWeb/Styles/style-v2/rock-components/_tree.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_tree.scss
@@ -61,9 +61,9 @@
   .treeview-actions {
     margin-bottom:    var(--spacing-xsmall);
 
-    .btn {
-      margin-bottom:  var(--spacing-tiny);
-    }
+    // .btn {
+    //   margin-bottom:  var(--spacing-tiny);
+    // }
   }
 }
 // ====================== END BASE STYLE ======================
