--- a/RockWeb/Themes/RockV2/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2/Styles/theme.scss
@@ -449,9 +449,9 @@ $navbar-element-height: 40px;
     }
   }
 
-  .dropdown-menu {
-    border: 0;
-  }
+  // .dropdown-menu {
+  //   border: 0;
+  // }
 
   .header-content {
     display: flex;
