--- a/RockWeb/Styles/style-v2/components/_button-groups.scss
+++ b/RockWeb/Styles/style-v2/components/_button-groups.scss
@@ -34,6 +34,11 @@
 
 // Prevent double borders when buttons are next to each other
 .btn-group {
+  a {
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-xsmall);
+  }
   .btn + .btn,
   .btn + .btn-group,
   .btn-group + .btn,
