--- a/RockWeb/Styles/style-v2/components/_forms.scss
+++ b/RockWeb/Styles/style-v2/components/_forms.scss
@@ -124,7 +124,7 @@ output {
   background-color:   var(--color-interface-softest);
   background-image:   none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border:             1px solid var(--color-interface-soft);
-  border-radius:      var(--rounded-small); // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+  border-radius:      var(--rounded-xsmall); // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
   box-shadow:         inset 0 1px 1px rgba(0, 0, 0, .075);
   transition:         border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 
@@ -313,6 +313,10 @@ output {
   }
 }
 
+.form-group.static-control .form-control-static {
+  padding-top: 0;
+}
+
 // Moved from _checkin-core.less 
 .form-group.required {
   .control-label::after {
@@ -336,7 +340,7 @@ select.form-control {
   background-repeat:      no-repeat;
   background-position:    right var(--spacing-medium) center;
   background-size:        var(--spacing-medium) 12px;
-  border-radius:          var(--rounded-small);
+  border-radius:          var(--rounded-xsmall);
   appearance:             none;
 
   &[multiple],
@@ -498,7 +502,7 @@ select.form-control {
   &.has-error {
     iframe {
       border:         1px solid var(--color-danger-strong);
-      border-radius:  var(--rounded-small);
+      border-radius:  var(--rounded-xsmall);
     }
   }
 }
@@ -591,7 +595,7 @@ a.warning {
   padding:        var(--spacing-xsmall) var(--spacing-medium);
   font-size:      var(--font-size-small);
   line-height:    16px; // Keep 16px to align with carot
-  border-radius:  var(--rounded-small);
+  border-radius:  var(--rounded-xsmall);
 
   select & {
     height:   34px;
@@ -605,7 +609,7 @@ a.warning {
 }
 
 .input-lg {
-  // .input-size(38px-large; var(--spacing-xsmall); var(--spacing-medium); var(--font-size-medium); var(--line-height-normal); var(--rounded-small));
+  // .input-size(38px-large; var(--spacing-xsmall); var(--spacing-medium); var(--font-size-medium); var(--line-height-normal); var(--rounded-xsmall));
   height:         38px;
   padding:        var(--spacing-xsmall) var(--spacing-medium);
   font-size:      var(--font-size-medium);
@@ -645,7 +649,7 @@ a.warning {
     padding:        var(--spacing-xsmall) var(--spacing-medium);
     font-size:      var(--font-size-small);
     line-height:    var(--line-height-normal);
-    border-radius:  var(--rounded-small);
+    border-radius:  var(--rounded-xsmall);
   }
   select.form-control {
     height: 34px;
@@ -670,7 +674,7 @@ a.warning {
     padding:        var(--spacing-xsmall) var(--spacing-medium);
     font-size:      var(--font-size-medium);
     line-height:    var(--line-height-normal);
-    border-radius:  var(--rounded-small);
+    border-radius:  var(--rounded-xsmall);
   }
   select.form-control {
     height:         var(--line-height-normal);
