--- a/RockWeb/Styles/style-v2/components/_labels.scss
+++ b/RockWeb/Styles/style-v2/components/_labels.scss
@@ -72,8 +72,8 @@
 }
 
 .label-primary{
-  background-color:   var(--color-primary-tint);
-  color:              var(--color-primary);
+  background-color:   var(--color-primary);
+  color:              var(--color-interface-softest);
 
   &[href] {
     &:hover,
