--- a/RockWeb/Styles/style-v2/rock-components/_picker-time.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_picker-time.scss
@@ -137,6 +137,7 @@
         text-align:     center;
         border:         1px solid var(--color-interface-soft);
         border-radius:  var(--rounded-small);
+        background-color: var(--color-interface-softer);
         outline:        none;
         box-shadow:     none;
 
