--- a/RockWeb/Styles/style-v2/rock-components/_pickers.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_pickers.scss
@@ -54,7 +54,7 @@
     cursor:           pointer;
     background-color: var(--color-interface-softest);
     border:           1px solid var(--color-interface-soft);
-    border-radius:    var(--rounded-small);
+    border-radius:    var(--rounded-xsmall);
     gap:              6px;
 
     &:hover {
