- Remove the double border from the custom select picker.

--- a/RockWeb/Styles/rock-components/custom-select.less
+++ b/RockWeb/Styles/rock-components/custom-select.less
@@ -39,6 +39,10 @@
   overflow: clip;
 }
 
+.custom-select-mobile-wrapper.is-closed {
+  border: 0;
+}
+
 .custom-select-mobile-wrapper .custom-select-item {
   --border-radius: var(--rounded-small);
 }
